[gd_scene load_steps=8 format=2]

[ext_resource path="res://fighting/hitbox/hitbox.gd" type="Script" id=1]
[ext_resource path="res://fighting/mobs/floaty/floaty.gd" type="Script" id=2]
[ext_resource path="res://asset/texture/mob.png" type="Texture" id=3]

[sub_resource type="Animation" id=1]
resource_name = "chase"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "die"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "stop_monitoring"
}, {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="CircleShape2D" id=3]
radius = 512.0

[sub_resource type="CircleShape2D" id=4]
radius = 6.0

[node name="floaty" type="Node2D" groups=["fighter", "mob"]]
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "chase"
anims/chase = SubResource( 1 )
anims/die = SubResource( 2 )

[node name="fov" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="fov"]
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 10
vframes = 10

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource( 1 )
knockback = Vector2( 100, -50 )
damage = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 4 )

[node name="hurtbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtbox"]
shape = SubResource( 4 )

[connection signal="body_entered" from="fov" to="." method="_on_fov_body_entered"]
[connection signal="body_exited" from="fov" to="." method="_on_fov_body_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
